<resources>
    <string name="app_name">Example</string>
    <string name="image">IMAGE</string>
    <string name="create_new_account">Create new account</string>
    <string name="your_email_or_phone_number">Mobile number or email</string>
    <string name="forgot_account">Forgot password?</string>
    <string name="login">Log in</string>
    <string name="fakebook">fakebook</string>
    <string name="your_password_here">Password</string>
    <string name="language">Language ^</string>
    <string name="what_s_your_name">Let\'s get to know you</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="dob">Date of Birth</string>
    <string name="enter_the_name_you_use_in_real_life">Enter your details</string>
    <string name="title_activity_chat">Chat</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_transform">Transform</string>
    <string name="menu_reflow">Reflow</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_settings">Settings</string>

    <string name="lorem_ipsum_title">Lorem Ipsum"</string>
    <string name="lorem_ipsum">Lorem Ipsum is simply placeholder text of the printing and
        typesetting industry. Lorem Ipsum has been the industry\'s standard placeholder text ever
        since the 1500s, when an unknown printer took a galley of type and scrambled it to make a
        type specimen book"
    </string>
    <string name="fab_content_description">Represents a view to invoke an action</string>
    <string name="image_view_item_transform_content_description">Represents an image view in the
        item
    </string>
    <string name="help">Help?</string>
    <string name="your_message">Your Message</string>
    <string name="create_account_below">Create Account below</string>
</resources>