<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/create_acc"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="24dp"
    android:background="@android:color/white"
    tools:context=".create_acc"
    app:background="@drawable/img_1">

    <ImageButton
        android:id="@+id/back_button"
        android:layout_width="32dp"
        android:padding="40dp"
        android:layout_height="32dp"
        android:layout_gravity="start"
        android:clickable="true"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:background="@drawable/back"
        />

    <TextView
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/what_s_your_name"
        android:textColor="@android:color/black"
        android:textAllCaps="false"
        android:textSize="25sp"
        android:layout_marginBottom="10dp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_the_name_you_use_in_real_life"
        android:textAllCaps="false"
        android:textSize="15sp"
        android:layout_marginBottom="16dp"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:layout_marginBottom="8dp">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginEnd="8dp"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="14sp"
                android:hint="@string/first_name"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="14sp"
                android:hint="@string/last_name"/>

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="14sp"
            android:hint="@string/your_email_or_phone_number" />

    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:layout_marginBottom="8dp">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginEnd="8dp"
            android:id="@+id/date_picker_text"
            android:background="@drawable/rounded_edittext"
            android:hint="@string/dob"/>

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginEnd="8dp"
            android:hint="Gender"
            android:id="@+id/list_view_text"
            android:background="@drawable/rounded_edittext"
            tools:ignore="HardcodedText" />

    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/next"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_withbg"
        android:focusable="true"
        android:textAllCaps="false"
        android:clickable="true"
        android:padding="16dp"
        android:text="Continue"
        android:textColor="@android:color/white"
        android:layout_marginTop="16dp"
        tools:ignore="HardcodedText" />


</LinearLayout>